--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,22 +3,33 @@
 <h2>Burgers Created!</h2>
 
 <ul>
-  {{#each cats}}
-    {{#unless devoured}}
-      {{> cats/cat-block devoured=true}}
+  {{#each burger_name}}
+    {{#unless this.devoured}}
+    <li>
+			{{this.id}}
+			{{this.burger_name}}
+
+    <form action="/{{this.id}}?_method=PUT" method="POST">
+			<input type="hidden" name="devoured" value="true">
+			<button class="btn-primary" type="submit">Devour It!</button>
+		</form>
+
+		</li>  
     {{/unless}}
   {{/each}}
 </ul>
 
 <h2>Burgers Already Ate!</h2>
 
-<ul>
-  {{#each cats}}
-    {{#if devoured}}
-      {{> cats/cat-block devoured=false}}
-    {{/if}}
-  {{/each}}
-</ul>
+  {{#each burgers}}
+		{{#if this.devoured}}
+			<li>
+			  {{this.id}}
+			  {{this.burger_name}}
+
+			</li>
+		{{/if}}
+	{{/each}}
 
 <h2>Add a Burger</h2>
 <form class="create-form">
