--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,18 +3,16 @@
 <h2>Burgers Created!</h2>
 
 <ul>
-  {{#each burger_name}}
+  {{#each burgers}}
     {{#unless this.devoured}}
     <li>
 			{{this.id}}
 			{{this.burger_name}}
-
-    <form action="/{{this.id}}?_method=PUT" method="POST">
-			<input type="hidden" name="devoured" value="true">
-			<button class="btn-primary" type="submit">Devour It!</button>
-		</form>
-
-		</li>  
+    
+    
+			<button value="{{this.id}}" class="btn-primary devour">Devour It!</button>
+    </li>
+		  
     {{/unless}}
   {{/each}}
 </ul>
@@ -32,7 +30,7 @@
 	{{/each}}
 
 <h2>Add a Burger</h2>
-<form class="create-form">
+<form action="/api/burgers" method="POST" class="create-form">
 
     <div class="form-group">
         <label for="new-burger">Burger Name:</label>
@@ -41,22 +39,3 @@
 
     <button type="submit" id="submit">Make this Burger</button>
 </form>
-
-<script type="text/javascript">
-
-$("#submit").on("click", function(event) {
-   // Prevent default refresh setting 
-   event.preventDefault();
-
-   // Function to verify user answer all the questions
-   function validate() {
-    
-    // Verify user input for name and photo
-    if (!$("#new-burger").val()) {
-        return false;
-    }
-    return true;
-   }
-
-  // If new-burger entry is validated push it to database
-</script>
