--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/burger/public/assets/css/burger_style.css" type="text/css" />
+		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
 		<title>Eat-Da-Burger!</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="/assets/js/script.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
