README & sequelize-heroku install

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,7 +13,7 @@
   <div class="row justify-content-center mb-3">
 
     <div class="col-sm-4">
-      <h2 class="text-center">Burgers Created!</h2>
+      <h2 class="text-center">Burgers to Eat!</h2>
 
         <ul>
           {{#each burgers}}
